# EE545_AI4MobileRobots

./: README.md
mushr545au24/: README.md
mushr545au24/assignment-1-masonry1-1-main/.gitlab/: .rosinstall
mushr545au24/control/: README.md  setup.py
mushr545au24/control/config/: parameters.yaml
mushr545au24/control/launch/: controller.launch  controller_sim.launch
mushr545au24/control/scripts/: path_sender
mushr545au24/control/src/control/: control_ros.py  controller.py  mpc.py  pid.py
mushr545au24/control/test/: controller.py  controller_performance.py  controller_performance.test  mpc.py
mushr545au24/control/writeup/: README.md
mushr545au24/ee545/: CMakeLists.txt  package.xml
mushr545au24/ee545/env-hooks/: ee545.bash.em
mushr545au24/ee545/launch/: teleop.launch
mushr545au24/ee545/maps/: 002.yaml  cse022.pgm  cse022.yaml
mushr545au24/ee545/scripts/: hallway_timer  whichws
mushr545au24/ee545/scripts/available_client/: whichws
mushr545au24/ee545/src/ee545/: frechet.py  utils.py
mushr545au24/final-race/: README.md
mushr545au24/final-race/control/: CMakeLists.txt  package.xml
mushr545au24/final-race/control/config/: control.rviz  control_juggler.xml  parameters.yaml  parameters.yaml.save
mushr545au24/final-race/control/launch/: controller.launch  plotjuggler.launch
mushr545au24/final-race/control/scripts/: control_node  path_sender
mushr545au24/final-race/control/src/control/: control_ros.py  controller.py  mpc.py  mpc_original.py  pid.py  purepursuit.py
mushr545au24/final-race/control/test/: pid.py  purepursuit.py
mushr545au24/final-race/control/writeup/: particle_filter.webm  run_car
mushr545au24/final-race/directory/: README.md
mushr545au24/final-race/ee545/: setup.py
mushr545au24/final-race/ee545/config/: default.rviz  hw4.rviz
mushr545au24/final-race/ee545/env-hooks/: ee545.zsh.em
mushr545au24/final-race/ee545/maps/: cse_basement.yaml  small_basement.yaml
mushr545au24/final-race/ee545/scripts/: uw_tools_client
mushr545au24/final-race/ee545/src/uw_tools/common/: modes.bash  modes.zsh  util.bash
mushr545au24/final-race/introduction/scripts/: compare_norm  path_publisher  pose_listener
mushr545au24/final-race/introduction/src/introduction/: listener.py
mushr545au24/final-race/introduction/test/: fibonacci_launch.py  fibonacci_launch.test  fibonacci_small.py  path_publisher.test
mushr545au24/final-race/localization/: README.md  bags.bag  package.xml
mushr545au24/final-race/localization/config/: parameters.yaml
mushr545au24/final-race/localization/launch/: particle_filter_sim.launch  particle_filter_teleop_sim.launch
mushr545au24/final-race/localization/launch/include/: particle_filter.xml
mushr545au24/final-race/localization/scripts/: .make_sensor_model_likelihood_plot.swp  download_bags.sh  make_motion_model_plot  make_particle_filter_plot  make_sensor_model_likelihood_plot  make_sensor_model_single_plot  particle_filter_node
mushr545au24/final-race/localization/src/localization/: .sensor_model.py.swp  particle_filter.py  sensor_model.py
mushr545au24/final-race/localization/test/: motion_model.py  particle_initializer.py  sensor_model.py
mushr545au24/final-race/localization/writeup/: README.md
mushr545au24/final-race/planning/config/: final_proj_waypoints.yaml  final_proj_waypoints_original.yaml
mushr545au24/final-race/planning/launch/: planner_car.launch
mushr545au24/final-race/planning/scripts/: planner  run_search
mushr545au24/final-race/planning/src/planning/: multi_goal_pub.py  planner_ros.py  problems.py  problems_edited.py  roadmap.py  rrt (copy).py  rrt.py  samplers.py  search.py
mushr545au24/introduction/: CMakeLists.txt  package.xml
mushr545au24/introduction/launch/: fibonacci.launch
mushr545au24/introduction/scripts/: fibonacci  path_publisher  pose_listener
mushr545au24/introduction/src/introduction/: fibonacci.py  indexing.py  listener.py
mushr545au24/introduction/test/: fibonacci.py  fibonacci_small.test  indexing.py  norms.py  path_publisher.py  pose_listener.test
mushr545au24/introduction/writeup/: README.md
mushr545au24/localization/: CMakeLists.txt
mushr545au24/localization/config/: parameters.yaml
mushr545au24/localization/launch/: particle_filter_sim.launch  particle_filter_teleop_sim.launch
mushr545au24/localization/launch/include/: particle_filter.xml
mushr545au24/localization/scripts/: make_sensor_model_likelihood_plot  particle_filter_node
mushr545au24/localization/src/localization/: motion_model.py  particle_filter.py  resampler.py  sensor_model.py
mushr545au24/localization/test/: particle_filter.py  resample.py
mushr545au24/localization/writeup/: README.md
mushr545au24/planning/: CMakeLists.txt  README.md  package.xml
mushr545au24/planning/config/: planning.rviz
mushr545au24/planning/launch/: make_roadmap.launch  planner_car.launch  planner_sim.launch
mushr545au24/planning/scripts/: planner  roadmap
mushr545au24/planning/src/planning/: dubins.py  planner_ros.py  problems.py  roadmap.py  rrt.py  samplers.py  search.py
mushr545au24/planning/test/: astar.py  problems.py  roadmap.py  rrt.py  samplers.py  shortcut.py
mushr545au24/planning/test/share/: map1.txt
mushr545au24/planning/writeup/: README.md
